--- a/index.html
+++ b/index.html
@@ -4,53 +4,64 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <title>Home - FavroiteGamers</title>
 </head>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="style.css" />
+   <title>Document</title>
+ </head>
+ <body>
 
-<body>
-<nav>  
-<ul>  
-<li>  
-<a href="#"> Home </a>  
-</li>  
-<li>  
-<a href="#"> About </a>  
-</li>  
-<li>  
-<a href="#"> Contact </a>  
-</li>  
-<li> <a href="#"> Terms of use </a>  
-</li>  
-<li>  
-<a href="#"> Join Us </a>  
-</li>  
-</ul>  
-</nav>  
+
 <div class="container">
 <img src="index-background.jpg" alt="background" width="700" height="300">
 <div class="centered"><h1>FavroiteGamers2017's Website</h1></div>
 </div>
 
-<p>Hey my name is FavroiteGamers and this is my website
-</p>
+
+
 
 <div>
+
+
+
 <h2>About Me</h2>
 </div> <div>
 <p>I am a small developer and a small Content Creator. I know how to code in HTML and 
-some Python, I also like to make Minecraft mods!</p>
+some Python, I also like to make Minecraft mods! On this website you can download my projects and also see
+my Code Documentation.</p>
 </div>
+<hr></hr>
 <div>
-<h2>Some of my Projects</h2>
+<div class="container">
+<img src="index-background-2.jpg" alt="background" width="700" height="300">
+<div class="centered"><a href="projects.html"><h2>My Projects</h2></a></div>
+</div>
 <p>
 
-<a href="url">All of my projects!</a>
 </p>
+<hr></hr>
 </div>
 <div>
-<h2>Code Documentation</h2>
-<p>My code documenting page is coming soon!</p>
+<div>
+<div class="container">
+<img src="index-background-3.jpg" alt="background" width="700" height="300">
+<div class="centered"><a href=""><h2>Code Documentation</h2></a></div>
+</div>
+<hr></hr>
+<div class="container">
+<img src="index-background-4.jpg" alt="background" width="700" height="300">
+<div class="centered"><a href="contact.html"><h2>Contact Me</h2></a></div>
+</div>
+<hr></hr>
+<p>Copyright 2022 FavroiteGamers2017</p>
 </div>
 <style>
 h1 {text-align: center;}
+h3 {text-align: center;}
 p {text-align: center;}
 h2 {text-align: center;}
 /* Container holding the image and the text */
@@ -84,17 +95,8 @@ height: 30px;
 display: flex;  
 align-items: center;  
 box-shadow: 0 0 25px 0 black;  
-}  
-header * {  
-display: inline;  
-}  
-header li {  
-margin: 20px;  
-}  
-header li a {  
-color: blue;  
-text-decoration: none;  
-}  
+
+
 </style>
 </body>
 
