--- a/shopping_list.html
+++ b/shopping_list.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Shopping List</title>
+<title>MaterialShopping</title>
+<!--Load Material Design elements-->
+<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!--Code for stylizing elements-->
 <style>
-input[type="file"]::-webkit-file-upload-button::after {
-  content: none;
+  
+  body {
+  background-color: #fcc6c2;
+  text-align: center;
 }
+@font-face {
+    font-family: ProductSans;
+    src: url("Product Sans Regular.ttf");
+}
+
+ul {
+  list-style-type: none;
+}
+
+h1 {
+  text-align: center;
+}
+.mdc-button__ripple {
+  align: center
+}
+
+  h1{
+  font-family: ProductSans;
+  text-align: center;
+}
+input[type='file'] {
+  color: rgba(0, 0, 0, 0)
+}
+input[type='text'] {
+  font-size: 16px;
+  font-family: ProductSans;
+}
+@use "@material/button";
 </style>
+
 </head>
 <body>
-<h1>My Shopping List</h1>
-
-<ul id="list"></ul>
-
-<button onclick="addItem()">Add Item</button>
-<button onclick="clearList()">Clear List</button>
-<button onclick="downloadList()">Download List</button>
-
+<h1>MaterialShopping</h1>
+<!--Script for ceating material design elements-->
+<script>mdc.ripple.MDCRipple.attachTo(document.querySelector<HTMLElement>('.foo-button'));
+  import {MDCTextField} from '@material/textfield';
+  const textField = new MDCTextField(document.querySelector('.mdc-text-field'));
+</script><ul id="list"></ul>
+<!--Code for buttons below list-->
+<button class="mdc-button foo-button" onclick="addItem()"> <div class="mdc-button__ripple"></div>Add Item</button>
+<button class="mdc-button foo-button" onclick="clearList()"> <div class="mdc-button__ripple"></div>Clear List</button>
+<button class="mdc-button foo-button" onclick="downloadList()"> <div class="mdc-button__ripple"></div>Download List</button>
+<button class="mdc-button foo-button" onclick=""> <div class="mdc-button__ripple"></div>Load List</button>
 <input type="file" id="file-input" onchange="loadList()">
 
+<!--Code for button functions, ie adding a item and clearing list-->
 <script>
 function addItem() {
   var li = document.createElement("li");
   var input = document.createElement("input");
   input.type = "text";
   input.placeholder = "Item";
+  input.ariaLabel="cool"
   li.appendChild(input);
   var price = document.createElement("input");
   price.type = "text";
@@ -36,6 +77,7 @@ function addItem() {
   li.appendChild(source);
   var removeButton = document.createElement("button");
   removeButton.textContent = "Remove";
+  removeButton.className = "mdc-button foo-button"
   removeButton.onclick = function() {
     this.parentElement.remove();
   };
@@ -154,6 +196,7 @@ function sendEmail() {
     text: "Here is your shopping list: " + emailData
   }))}
 </script>
+
 </body>
 </html>
 
